# 3d-viewer

./: .gitignore
src/: Main.cpp  Makefile  main.cpp  parsing.cc  parsing.h  test.cc
src/.config/: .settings.comm
src/AffinTransformStrategy/: AfinTransformStrategy.h
src/AfinTransformStrategy/: AfinTransformStrategy.cc  AfinTransformStrategy.h
src/AfinTransformStrategy/tests/: CMakeLists.txt  afin_transform_tests.cc  clean.sh  main.cc
src/BackFasade/: BackFasade.cc  BackFasade.h
src/Command/: Command.h
src/Commands/: AbstractCommand.h  BaseCommand.h  Commands.cc  Commands.h  CommandsQueue.h  LineCommands.h  Lines.h  MoveCommands.h  Moves.h  ProgCommands.h  RotateCommands.h  Rotates.h  Shell.cc  Shell.h  VerticeCommands.h  Vertices.h  test.cc
src/Commands/buff/: CommandsQueue copy.h  Shell.cc  Shell.h
src/Controller/: Controller.cc  Controller.h
src/Fasade/: Fasade.cc  Fasade.h  UndoRedoFasade.cc
src/Helpers/: Helpers.h
src/Mediator/: AbstractMediator.h  Mediator.cc  Mediator.h  Mediator.tpp  UndoRedoMediator.cc
src/OGLWidget/: Error.cpp  OGLWidget copy.cc  OGLWidget copy.h  OGLWidget.cc  OGLWidget.h
src/Parser/: Parser.cc  Parser.h
src/ShaderStrategy/: ShaderStrategy.cc  ShaderStrategy.h
src/Tests/: Makefile  TestParser.cc  TestShell.cc  test_parser
src/Tests/CommandsTest/: CMakeLists.txt  test.cc  test.h  test_fasade.h
src/Tests/Parser/: TestParser.cc
src/Viewer/: EventFilter.h  Mainwindow.cc  Mainwindow.h
src/build-build-Qt_6_4_0_6_4_0_1-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
src/build-build-Qt_6_4_0_6_4_0_1-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-73def2776c24baee1287.json  target-viewer-Debug-09790c37dc1fa4a71a1a.json  target-viewer_autogen-Debug-e2549dc516204c957159.json
src/build-build-Qt_6_4_0_6_4_0_1-Debug/.qt/: QtDeploySupport.cmake
src/build-build-Qt_6_4_0_6_4_0_1-Debug/.qtc_clangd/: compile_commands.json
src/build-build-Qt_6_4_0_6_4_0_1-Debug/viewer_autogen/: moc_predefs.h  mocs_compilation.cpp
src/build-build-Qt_6_4_0_6_4_0_1-Debug/viewer_autogen/6II4XQXHJI/: moc_OGLWidget.cpp.d
src/build-build-Qt_6_4_0_6_4_0_1-Debug/viewer_autogen/QLKQANFW2G/: moc_mainwindow.cpp.d
src/parser/: parsing.cc
src/tests/: test.cc
src/viewer/: CMakeLists.txt  EventFilter.cc  EventFilter.h  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+828 files in other folders)
